<resources>
    <string name="app_name">Meet Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_your_name">Vui lòng nhập tên của bạn </string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="please_enter_email">Vui lòng nhập email đúng định dạng</string>
    <string name="please_enter_password">Mật khẩu cần có 6–16 kí tự</string>
    <string name="create_account_success">Tạo tài khoản thành công</string>
    <string name="account_exist">Tài khoản đã tồn tại</string>
    <string name="will_join"> sẽ tham gia</string>
    <string name="error_login">Sai tài khoản hoặc mật khẩu</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="error">Đã xảy ra lỗi</string>
    <string name="reset_password">Mật khẩu của bạn đã được cấp lại, vui lòng kiểm tra email</string>
    <string name="email_not_found">Tài khoản chưa đăng kí</string>
    <string name="huongdan">Vui lòng nhập email để nhận hướng dẫn đặt lại mật khẩu</string>
    <string name="personal">Cá nhân</string>
    <string name="home">Trang chủ</string>
    <string name="can_join">CÓ THỂ THAM GIA</string>
    <string name="tv_personal_login_first">Bạn cần phải đăng nhập trước</string>
    <string name="tv_personal_login_detail">Vui lòng đăng nhập để quản lý sự kiện của bạn</string>
    <string name="btn_login">ĐĂNG NHẬP</string>
    <string name="tv_dont_have_account">Chưa có tài khoản?</string>
    <string name="tv_sign_up_now">Đăng kí ngay!</string>
    <string name="end_today">KẾT THÚC HÔM NAY</string>
    <string name="_cause">Bởi </string>
    <string name="todo">TODO</string>
    <string name="_from">Từ </string>
    <string name="mypage">Trang chủ</string>
    <string name="category">Danh mục</string>
    <string name="search"> Tìm kiếm</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="_time">Thời gian</string>
    <string name="address">Địa điểm</string>
    <string name="amount">Số lượng</string>
    <string name="topic">Chủ đề</string>
    <string name="contact">Liên hệ</string>
    <string name="event_description">Mô tả sự kiện</string>
    <string name="event_near">Sự kiện quanh đây</string>
    <string name="join">SẼ THAM GIA</string>
    <string name="joined">ĐÃ THAM GIA</string>
    <string name="you_must_login">Bạn phải đăng nhập để sử dụng chức năng này.</string>
    <string name="login_lowercase">Đăng nhập</string>
    <string name="join_lowercase">Đã tham gia</string>
    <string name="can_join_lowercase">Có thể tham gia</string>
    <string name="not_join">Không tham gia</string>
    <string name="near_me">Gần tôi</string>
    <string name="google_map_key">AIzaSyDCRFaHK-Az5QNdVcw2fOMfAf8sEhz95Jo</string>
    <string name="going_count">sẽ tham gia</string>
    <string name="_reset_pw">ĐĂT LẠI MẬT KHẨU</string>
    <string name="end_to_day">Kết thúc hôm nay</string>
    <string name="finish">Đã kết thúc</string>
    <string name="upcoming">Sắp diễn ra</string>
    <string name="api_error">Không thể tải về</string>
    <string name="happenning">Đang diễn ra</string>
    <string name="permission_ask">Ứng dụng cần quyền lấy vị trí của bạn để thực hiện tác vụ này. Vui lòng cấp quyền cho ứng dụng bằng cách</string>
    <string name="permission_setting"><![CDATA[Cài đặt.\n\nChọn quyền -> Cấp quyền]]></string>
    <string name="manual_access">Cấp quyền thủ công</string>
    <string name="cancel">Hủy</string>
    <string name="granted_permissions_success">Đã cấp quyền cho ứng dụng</string>
    <string name="notification">Thông báo</string>
    <string name="gps_key">gps</string>
    <string name="turn_on_gps">Vui lòng bật GPS !</string>
    <string name="ok">Đồng ý</string>
    <string name="tag">fragment_alert</string>
    <string name="current_location">Bạn đang ở đây</string>
    <string name="location_not_found">Không thể tìm thấy vị trí của bạn</string>
    <string name="key_token">keyToken</string>
    <string name="token_expired">Token hết hạn, vui lòng đăng nhập lại</string>
    <string name="noResult">Không tìm thấy sự kiện phù hợp</string>
    <string name="eventEnded">ĐÃ KẾT THÚC</string>
    <string name="eventHappen">CHƯA KẾT THÚC</string>
    <string name="firstFragment">first Fragment</string>
    <string name="UpdateList">UpdateList</string>
    <string name="MyPage">Trang chủ</string>
    <string name="nearMe">Gần tôi</string>
    <string name="categories">Danh mục</string>
    <string name="ignore">Bỏ qua</string>

</resources>