<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnPersonalLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/ic_rectangle_btn"
        android:text="@string/btn_login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintDimensionRatio="5.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPersonalLoginDetail" />

    <ImageView
        android:id="@+id/ivPersonalLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_personal_login"
        app:layout_constraintDimensionRatio="0.74"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivHeader" />

    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPersonalLoginFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/tv_personal_login_first"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPersonalLogin" />

    <TextView
        android:id="@+id/tvPersonalLoginDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_personal_login_detail"
        android:textColor="#A8A2B2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPersonalLoginFirst" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/personal"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/ivHeader"
        app:layout_constraintTop_toTopOf="@id/ivHeader" />

    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_dont_have_account"
        android:textColor="#A8A2B2"
        android:textSize="14sp"
        android:layout_marginTop="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPersonalLogin" />

    <TextView
        android:id="@+id/tvSignUpNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_sign_up_now"
        android:textColor="#5D20CD"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDontHaveAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>