<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottomSheet">

    <ImageView
        android:id="@+id/ivTickJoined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_tick"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/tvJoined"
        app:layout_constraintEnd_toEndOf="@id/tvJoined"
        app:layout_constraintTop_toTopOf="@id/tvJoined" />

    <ImageView
        android:id="@+id/ivTickCanJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_tick"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/tvCanJoin"
        app:layout_constraintEnd_toEndOf="@id/tvCanJoin"
        app:layout_constraintTop_toTopOf="@id/tvCanJoin" />

    <ImageView
        android:id="@+id/ivTickNotJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_tick"
        app:layout_constraintBottom_toBottomOf="@id/tvNotJoin"
        app:layout_constraintEnd_toEndOf="@id/tvNotJoin"
        app:layout_constraintTop_toTopOf="@id/tvNotJoin" />

    <TextView

        android:id="@+id/tvJoined"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_item"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:gravity="center_vertical"
        android:text="@string/join_lowercase"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNotJoin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_item"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:gravity="center_vertical"
        android:text="@string/not_join"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintTop_toBottomOf="@id/tvCanJoin"
        tools:layout_editor_absoluteX="-39dp" />

    <TextView
        android:id="@+id/tvCanJoin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_item"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:gravity="center_vertical"
        android:text="@string/can_join_lowercase"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintTop_toBottomOf="@id/tvJoined" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#A8A2B2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJoined" />

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="#A8A2B2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCanJoin" />

</androidx.constraintlayout.widget.ConstraintLayout>