<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:background="#ffffff"
        android:paddingBottom="13dp">

        <FrameLayout
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:adjustViewBounds="true"
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:scaleType="centerCrop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
               />
        </FrameLayout>

        <ImageView
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_rectangle_14"
            app:layout_constraintBottom_toBottomOf="@id/author"
            app:layout_constraintStart_toEndOf="@id/author"
            app:layout_constraintTop_toTopOf="@id/author" />

        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@{news.title}"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/publish_date" />

        <TextView
            android:id="@+id/text_boi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="3dp"
            android:text="@string/_cause"
            android:textColor="@color/color_text_defaut"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_title" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="3dp"
            android:text="@{news.author}"
            android:textColor="@color/color_text_defaut"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/text_boi"
            app:layout_constraintTop_toBottomOf="@id/news_title" />

        <TextView
            android:id="@+id/publish_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:drawableStart="@drawable/ic_clock_circular"
            android:text="@{news.publishDate}"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <TextView
            android:id="@+id/text_tu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="3dp"
            android:text="@string/_from"
            android:textColor="@color/color_text_defaut"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/author"
            app:layout_constraintTop_toBottomOf="@id/news_title" />

        <TextView
            android:id="@+id/feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="3dp"
            android:text="@{news.feed}"
            android:textColor="@color/color_text_defaut"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/text_tu"
            app:layout_constraintTop_toBottomOf="@id/news_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="news"
            type="com.example.meetup.model.dataLocal.News" />

    </data>
</layout>