<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_btn_disable"
        android:fontFamily="sans-serif"
        android:text="@string/_reset_pw"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintDimensionRatio="343:60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivEmailForgot" />


    <ImageView
        android:id="@+id/ivBackGround"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_background_forgot_password" />

    <ImageView
        android:id="@+id/ivKeyLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackGround"
        app:srcCompat="@drawable/ic_lock" />

    <ImageView
        android:id="@+id/ivEmailForgot"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordLabel"
        app:srcCompat="@drawable/ic_rectangleinput">

    </ImageView>

    <ImageView
        android:id="@+id/ivEmailLogoForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_21dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivEmailForgot"
        app:layout_constraintStart_toStartOf="@+id/ivEmailForgot"
        app:layout_constraintTop_toTopOf="@+id/ivEmailForgot"
        app:srcCompat="@drawable/ic_icon_email_filled" />

    <TextView
        android:id="@+id/tvForgotPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivKeyLock" />

    <TextView
        android:id="@+id/tvForgotPasswordDescriptions"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/huongdan"
        android:textColor="#A8A2B2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordLabel"/>

    <TextView
        android:id="@+id/tvEmailForgot"
        android:layout_width="68dp"
        android:layout_height="17dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="Email"
        android:textColor="#A8A2B2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/ivEmailForgot"
        app:layout_constraintTop_toTopOf="@+id/ivEmailForgot"
    />

    <TextView
        android:visibility="gone"
        android:id="@+id/tvMessForgot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:gravity="center"
        android:textColor="#A50000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivEmailForgot"></TextView>

    <TextView
        android:id="@+id/tvIgnoreResetPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="Bỏ qua"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />

    <View
        android:id="@+id/divider1"
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="@+id/ivEmailForgot"
        app:layout_constraintTop_toTopOf="@+id/ivEmailForgot" />

    <EditText
        android:id="@+id/edtEmailForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="auto"
        android:fontFamily="sans-serif"
        android:hint="hovaten@rikkeisoft.com"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/ivEmailForgot"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailForgot"
        />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/_24dp"
        android:layout_height="@dimen/_24dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:text="Quên mật khẩu"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imgBack"
        app:layout_constraintTop_toTopOf="parent"
        >
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>